# docker-ml-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
configs/: README.md
notebooks/: check_environment.ipynb
scripts/: README.md  add_gitinfo_to_prompt.sh
